# AtomicIP-

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  VALIDATION_IMPLEMENTATION.md  codecov.yml  deny.toml  task1.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependency-scan.yml  deploy-mainnet.yml  deploy-testnet.yml  mutation.yml  openapi-validate.yml  release.yml  security.yml  test.yml
api-server/: Cargo.toml
api-server/src/: audit.rs  auth.rs  cache.rs  circuit_breaker.rs  compression.rs  deduplication.rs  error_recovery.rs  events.rs  graphql.rs  handlers.rs  lib.rs  load_balancer.rs  load_testing.rs  main.rs  middleware_pipeline.rs  request_queue.rs  request_signing.rs  schemas.rs  tracing_middleware.rs  validation.rs  validation_fuzz_tests.rs  validation_middleware.rs  websocket.rs
contracts/atomic_swap/src/: arbitration_tests.rs  benchmarks.rs  chaos_tests.rs  escrow_tests.rs  lib.rs  multi_signer_tests.rs  types.rs
contracts/ip_registry/: Cargo.toml
contracts/ip_registry/src/: benchmarks.rs  lib.rs  (+4 more)
docs/: api-reference.md  atomic-swap.md  benchmarks.md  chaos-engineering.md  code-coverage.md  commitment-scheme.md  dependency-scanning.md  invariants.md  load-testing.md  mutation-testing.md  security-scanning.md  swap-insurance.md  swap-partial-payment.md  swap-reputation-scoring.md
scripts/: security-checks.sh
src/__tests__/: batchMatcher.test.js  swapInsurance.test.js  swapReputationScorer.test.js
src/batch/: batchMatcher.js
src/insurance/: swapInsurance.js
src/reputation/: swapReputationScorer.js
